testdata/language-features/basic-list/list15.reject.out
type error: can not unify
[32m'Char[m
with
[32m'Tuple0[m

in "testdata/language-features/basic-list/list15.reject.lc" (line 1, column 20):
value = 'h':'i':():[]
                   ^^
